typos in hausarbeiten sind wie sand im schuh -- man wird sie nie ganz los

--- a/paper.tex
+++ b/paper.tex
@@ -89,8 +89,8 @@
 \begin{center}
     \begin{tabular}{l l} \toprule
         Name & Sections \\ \midrule
-        Valentin Carl & \\
-        Daniel Gottschling & \\
+        Valentin Carl & \ref{sec:sand} \\
+        Daniel Gottschling & \ref{sec:sand} \\
         Jonas Heisterberg & \\
         David Schmidt & \\
         Marvin Steinke & \ref{sec:introduction}, \ref{sec:fusionize} \\ \bottomrule
